minor align fixes

--- a/src/styles/route.scss
+++ b/src/styles/route.scss
@@ -7,7 +7,7 @@
   flex-grow: 1;
   text-align: center;
   border-bottom: 1px solid #d2d5d6;
-  margin: 0 12px;
+  margin: 0 5px;
   padding: 7px 0;
   padding-right: 5px;
   position: relative;
@@ -55,4 +55,8 @@
 .b-route__date {
   font-size: 12px;
   color: #8B9497;
+}
+
+.b-route__to {
+  text-align: right;
 }
